add env variable when start java. fix command line options.